# grain-mcp-server

./: README.md  grain.py  main.py  parser.py  pyproject.toml
src/grain_mcp_server/: grain.py  main.py  parser.py
tests/: test_parser.py
