[project]
name = "grain-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=2.2.5",
    "playwright>=1.51.0",
]

[project.scripts]
grain-mcp-server = "grain_mcp_server.main:main"
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"